GC 笔记整理